@@ -6,6 +6,7 @@ import com.example.lolserver.domain.spectator.application.port.out.SpectatorCach
 import com.example.lolserver.mapper.spectator.SpectatorClientMapper;
 import com.example.lolserver.restclient.spectator.SpectatorRestClient;
 import com.example.lolserver.restclient.spectator.model.CurrentGameInfoVO;
+import com.example.lolserver.restclient.spectator.model.ObserversVO;
 import com.example.lolserver.restclient.spectator.model.ParticipantVO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -42,14 +43,15 @@ class SpectatorClientAdapterTest {
         adapter = new SpectatorClientAdapter(spectatorRestClient, spectatorClientMapper, spectatorCachePort);
     }
 
-    @DisplayName("API 조회 성공 시 결과를 반환하고 캐시에 저장한다")
+    @DisplayName("API 조회 성공 시 결과를 반환하고 캐시 및 메타데이터를 저장한다")
     @Test
-    void getCurrentGameInfo_success_returnsAndCaches() {
+    void getCurrentGameInfo_success_returnsAndCachesWithMeta() {
         // given
         String region = "kr";
         String puuid = "test-puuid";
-        CurrentGameInfoVO vo = createVO(12345L);
-        CurrentGameInfoReadModel readModel = createReadModel(12345L);
+        long gameStartTime = System.currentTimeMillis();
+        CurrentGameInfoVO vo = createVO(12345L, gameStartTime);
+        CurrentGameInfoReadModel readModel = createReadModel(12345L, gameStartTime);
 
         given(spectatorRestClient.getCurrentGameInfoByPuuid(region, puuid)).willReturn(vo);
         given(spectatorClientMapper.toReadModel(vo)).willReturn(readModel);
@@ -63,11 +65,12 @@ class SpectatorClientAdapterTest {
         then(spectatorRestClient).should().getCurrentGameInfoByPuuid(region, puuid);
         then(spectatorClientMapper).should().toReadModel(vo);
         then(spectatorCachePort).should().saveCurrentGame(region, readModel);
+        then(spectatorCachePort).should().saveGameMeta(region, 12345L, gameStartTime, List.of("puuid-1"));
     }
 
-    @DisplayName("API가 null을 반환하면 캐시 저장 없이 null 반환")
+    @DisplayName("API가 null을 반환하면 Negative Cache 저장 후 null 반환")
     @Test
-    void getCurrentGameInfo_apiReturnsNull_returnsNullWithoutCache() {
+    void getCurrentGameInfo_apiReturnsNull_savesNegativeCache() {
         // given
         String region = "kr";
         String puuid = "test-puuid";
@@ -82,6 +85,7 @@ class SpectatorClientAdapterTest {
         then(spectatorRestClient).should().getCurrentGameInfoByPuuid(region, puuid);
         then(spectatorClientMapper).should(never()).toReadModel(any(CurrentGameInfoVO.class));
         then(spectatorCachePort).should(never()).saveCurrentGame(any(), any());
+        then(spectatorCachePort).should().saveNoGame(region, puuid);
     }
 
     @DisplayName("API 예외 발생 시 null 반환")
@@ -102,20 +106,20 @@ class SpectatorClientAdapterTest {
         then(spectatorCachePort).should(never()).saveCurrentGame(any(), any());
     }
 
-    private CurrentGameInfoVO createVO(long gameId) {
+    private CurrentGameInfoVO createVO(long gameId, long gameStartTime) {
         return new CurrentGameInfoVO(
-                gameId, "MATCHED_GAME", "CLASSIC", 11L,
-                System.currentTimeMillis(), 600L, "KR", "key",
-                List.of(new ParticipantVO("Player1", "puuid-1", 1L, 100L, 4L, 7L, false, null)),
+                gameId, "MATCHED_GAME", "CLASSIC", 11L, 420L,
+                gameStartTime, 600L, "KR", new ObserversVO("key"),
+                List.of(new ParticipantVO("Player1#KR1", "puuid-1", 1L, 100L, 4L, 7L, 1L, false, Collections.emptyList(), null)),
                 Collections.emptyList()
         );
     }
 
-    private CurrentGameInfoReadModel createReadModel(long gameId) {
+    private CurrentGameInfoReadModel createReadModel(long gameId, long gameStartTime) {
         return new CurrentGameInfoReadModel(
-                gameId, "MATCHED_GAME", "CLASSIC", 11L,
-                System.currentTimeMillis(), 600L, "KR", "key",
-                List.of(new ParticipantReadModel("Player1", "puuid-1", 1L, 100L, 4L, 7L, false, null)),
+                gameId, "MATCHED_GAME", "CLASSIC", 11L, 420L,
+                gameStartTime, 600L, "KR", "key",
+                List.of(new ParticipantReadModel("Player1#KR1", "puuid-1", 1L, 100L, 4L, 7L, 1L, false, null)),
                 Collections.emptyList()
         );
     }
